fix Activity page vertical alignment in android

--- a/NativeScript Friends/app/views/activity-page.css
+++ b/NativeScript Friends/app/views/activity-page.css
@@ -8,6 +8,7 @@
 .activity-user {
     color: #FFFFFF;
     font-size: 12;
+    vertical-align: center;
 }
 
 .margin-right {
